changed return types from LinkedList to List